FROMLIST: dt-bindings: arm: qcom: Add QCM6490 IDP board
Document the qcom,qcm6490-idp board based off qcm6490 SoC.

Change-Id: I9e7340f21f19cb181be95775b9a9dd0d1c064270
Signed-off-by: Komal Bajaj <quic_kbajaj@quicinc.com>
Reviewed-by: Krzysztof Kozlowski <krzysztof.kozlowski@linaro.org>
Link: https://lore.kernel.org/linux-arm-msm/20231003175456.14774-2-quic_kbajaj@quicinc.com/
Signed-off-by: Komal Bajaj <quic_kbajaj@quicinc.com>

--- a/Documentation/devicetree/bindings/arm/qcom.yaml
+++ b/Documentation/devicetree/bindings/arm/qcom.yaml
@@ -386,6 +386,7 @@ properties:
       - items:
           - enum:
               - fairphone,fp5
+              - qcom,qcm6490-idp
           - const: qcom,qcm6490
 
       - description: Qualcomm Technologies, Inc. Distributed Unit 1000 platform
