--- a/arch/arm64/configs/qcom_defconfig
+++ b/arch/arm64/configs/qcom_defconfig
@@ -77,6 +77,9 @@ CONFIG_MEMORY_HOTREMOVE=y
 CONFIG_KSM=y
 CONFIG_MEMORY_FAILURE=y
 CONFIG_TRANSPARENT_HUGEPAGE=y
+CONFIG_CMA_DEBUG=y
+CONFIG_CMA_SYSFS=y
+CONFIG_CMA_AREAS=32
 CONFIG_NET=y
 CONFIG_PACKET=y
 CONFIG_IP_MULTICAST=y
@@ -1061,7 +1064,7 @@ CONFIG_DEBUG_KERNEL=y
 CONFIG_DEBUG_INFO_DWARF_TOOLCHAIN_DEFAULT=y
 CONFIG_DEBUG_INFO_REDUCED=y
 CONFIG_MAGIC_SYSRQ=y
-CONFIG_DEBUG_FS=y
+CONFIG_PAGE_OWNER=y
 # CONFIG_SCHED_DEBUG is not set
 CONFIG_CORESIGHT=m
 CONFIG_CORESIGHT_LINK_AND_SINK_TMC=m
