--- a/arch/arm64/boot/dts/qcom/qcm6490-idp.dts
+++ b/arch/arm64/boot/dts/qcom/qcm6490-idp.dts
@@ -16,6 +16,10 @@
 	model = "Qualcomm Technologies, Inc. QCM6490 IDP";
 	compatible = "qcom,qcm6490-idp", "qcom,qcm6490";
 
+	/* This will be deprecated soon */
+	qcom,msm-id = <497 0x10000>, <498 0x10000>, <475 0x10000>, <515 0x10000>;
+	qcom,board-id = <34 0>, <34 1>;
+
 	aliases {
 		serial0 = &uart5;
 	};
