PENDING: arm64: dts: qcm6490: Remove voltage voting for USB rails
USB driver does not vote for voltage on hsphy and ssphy
rails. Due to which the initial voltage set by bootloader
is overridden by regulator framework with min voltage specified
on regulator registration.

Fix this temporarily by removing voltage voting support, which
will prevent regulator framework overriding the voltage set by
bootloader.

This commit will be reverted once voltage voting support is added
in USB driver.

Change-Id: I7123a3c0b7b6513974fc44a751f91c251b7d34c1
Signed-off-by: Umang Chheda <quic_uchheda@quicinc.com>

--- a/arch/arm64/boot/dts/qcom/qcm6490-idp.dts
+++ b/arch/arm64/boot/dts/qcom/qcm6490-idp.dts
@@ -349,3 +349,17 @@
 	regulator-allow-set-load;
 	regulator-allowed-modes = <RPMH_REGULATOR_MODE_LPM RPMH_REGULATOR_MODE_HPM>;
 };
+
+&vreg_l1b_0p8 {
+	/delete-property/regulator-min-microvolt;
+	/delete-property/regulator-max-microvolt;
+	regulator-allow-set-load;
+	regulator-allowed-modes = <RPMH_REGULATOR_MODE_LPM RPMH_REGULATOR_MODE_HPM>;
+};
+
+&vreg_l10c_0p8 {
+	/delete-property/regulator-min-microvolt;
+	/delete-property/regulator-max-microvolt;
+	regulator-allow-set-load;
+	regulator-allowed-modes = <RPMH_REGULATOR_MODE_LPM RPMH_REGULATOR_MODE_HPM>;
+};
